--- a/templates/room.html
+++ b/templates/room.html
@@ -1,4 +1,4 @@
-<!-- chat/templates/chat/room.html -->
+<!-- chat/templates/chat/room.html
 <!DOCTYPE html>
 <html>
 <head>
@@ -22,6 +22,9 @@
             + '/'
         );
 
+        // if() {
+        // }
+
         chatSocket.onmessage = function(e) {
             const data = JSON.parse(e.data);
             document.querySelector('#chat-log').value += (data.message + '\n');
@@ -43,6 +46,72 @@
             const message = messageInputDom.value;
             chatSocket.send(JSON.stringify({
                 'message': message
+            }));
+            messageInputDom.value = '';
+        };
+    </script>
+</body>
+</html> -->
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="utf-8" />
+    <title>Chat Room</title>
+</head>
+
+<body>
+    <textarea id="chat-log" cols="100" rows="20"></textarea><br>
+    <input id="chat-message-input" type="text" size="100"><br>
+    <input id="chat-message-submit" type="button" value="Send">
+    {{ room_name|json_script:"room-name" }}
+    {{ request.user.username|json_script:"user_id" }}
+    <script>
+        const roomName = JSON.parse(document.getElementById('room-name').textContent);
+        const user_id = JSON.parse(document.getElementById('user_id').textContent);
+        const chatSocket = new WebSocket(
+            'ws://'
+            + window.location.host
+            + '/ws/chat/'
+            + roomName
+            + '/'
+        );
+
+        chatSocket.onmessage = function (e) {
+            const data = JSON.parse(e.data);
+            console.log(data)
+            if(data.messages){
+                for(var i=0;i<data.messages.length;i++)
+                {
+                    console.log(data.messages[i].content);
+                    document.querySelector('#chat-log').value += (data.messages[i].content + '\n');
+                }
+            }
+            else
+            {
+                document.querySelector('#chat-log').value += (data.message.content + '\n');
+            }
+        };
+
+        chatSocket.onclose = function (e) {
+            console.error('Chat socket closed unexpectedly');
+        };
+
+        document.querySelector('#chat-message-input').focus();
+        document.querySelector('#chat-message-input').onkeyup = function (e) {
+            if (e.keyCode === 13) {  // enter, return
+                document.querySelector('#chat-message-submit').click();
+            }
+        };
+
+        document.querySelector('#chat-message-submit').onclick = function (e) {
+            const messageInputDom = document.querySelector('#chat-message-input');
+            const message = messageInputDom.value;
+            chatSocket.send(JSON.stringify({
+                'message': message,
+                'command': 'new_message',
+                'chat':roomName,
+                'user':user_id
             }));
             messageInputDom.value = '';
         };
